Added request to get long term token

--- a/whatsapp/example_send.ipynb
+++ b/whatsapp/example_send.ipynb
@@ -2,6 +2,63 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ea2b9af7",
+   "metadata": {},
+   "source": [
+    "Get access token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b31af60c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status Code: 200\n",
+      "Response: {'access_token': 'EAATD8as9tI0BQZADpo29nFPN3mtPYhztCuiOjCEA3zK9vZATDZCp2HPdq5PANZAZAbHl9Myn5xlic5fHzLFqRPvebnUjZAyZCbncr5Iyrve2iDHV4KHrZCzJhKOLxFzhUc3Ll5gqWANRBHBPS02jwxkpSQZAJGGVN1guQZC5QZAmsGhJPZBOpIRt0dapeO5Xv0Gx', 'token_type': 'bearer', 'expires_in': 5153604}\n",
+      "Long-term Access Token: EAATD8as9tI0BQZADpo29nFPN3mtPYhztCuiOjCEA3zK9vZATDZCp2HPdq5PANZAZAbHl9Myn5xlic5fHzLFqRPvebnUjZAyZCbncr5Iyrve2iDHV4KHrZCzJhKOLxFzhUc3Ll5gqWANRBHBPS02jwxkpSQZAJGGVN1guQZC5QZAmsGhJPZBOpIRt0dapeO5Xv0Gx\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "APP_ID = os.getenv(\"APP_ID\")\n",
+    "CLIENT_SECRET = os.getenv(\"CLIENT_SECRET\")\n",
+    "SHORT_TERM_TOKEN = os.getenv(\"SHORT_TERM_TOKEN\")\n",
+    "\n",
+    "url = \"https://graph.facebook.com/oauth/access_token\"\n",
+    "\n",
+    "params = {\n",
+    "    \"grant_type\": \"fb_exchange_token\",\n",
+    "    \"client_id\": APP_ID,\n",
+    "    \"client_secret\": CLIENT_SECRET,\n",
+    "    \"fb_exchange_token\": SHORT_TERM_TOKEN\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, params=params)\n",
+    "\n",
+    "print(\"Status Code:\", response.status_code)\n",
+    "print(\"Response:\", response.json())\n",
+    "\n",
+    "# Extract the long-term token\n",
+    "if response.status_code == 200:\n",
+    "    long_term_token = response.json().get(\"access_token\")\n",
+    "    print(\"Long-term Access Token:\", long_term_token)\n",
+    "else:\n",
+    "    print(\"Error:\", response.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "06327b14",
    "metadata": {},
    "source": [
@@ -10,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,9 +85,9 @@
     "import os\n",
     "from dotenv import load_dotenv\n",
     "\n",
-    "# Load environment variables (ACCESS_TOKEN and WABA_ID)\n",
+    "# Load environment variables (LONG_TERM_TOKEN and WABA_ID)\n",
     "load_dotenv()\n",
-    "ACCESS_TOKEN = os.getenv(\"ACCESS_TOKEN\")\n",
+    "LONG_TERM_TOKEN = os.getenv(\"LONG_TERM_TOKEN\")\n",
     "WHATSAPP_BUSINESS_ACCOUNT_ID = os.getenv(\"WHATSAPP_BUSINESS_ACCOUNT_ID\")\n",
     "\n",
     "# API endpoint for creating a template\n",
@@ -38,7 +95,7 @@
     "\n",
     "# Headers\n",
     "headers = {\n",
-    "    \"Authorization\": f\"Bearer {ACCESS_TOKEN}\",\n",
+    "    \"Authorization\": f\"Bearer {LONG_TERM_TOKEN}\",\n",
     "    \"Content-Type\": \"application/json\"\n",
     "}\n",
     "\n",
@@ -64,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "7d922f70",
    "metadata": {},
    "outputs": [
@@ -96,14 +153,14 @@
     "\n",
     "# Load environment variables\n",
     "load_dotenv()\n",
-    "ACCESS_TOKEN = os.getenv(\"ACCESS_TOKEN\")\n",
+    "LONG_TERM_TOKEN = os.getenv(\"LONG_TERM_TOKEN\")\n",
     "WHATSAPP_BUSINESS_ACCOUNT_ID = os.getenv(\"WHATSAPP_BUSINESS_ACCOUNT_ID\")\n",
     "\n",
     "# Endpoint to list templates\n",
     "url = f\"https://graph.facebook.com/v23.0/{WHATSAPP_BUSINESS_ACCOUNT_ID}/message_templates\"\n",
     "\n",
     "headers = {\n",
-    "    \"Authorization\": f\"Bearer {ACCESS_TOKEN}\"\n",
+    "    \"Authorization\": f\"Bearer {LONG_TERM_TOKEN}\"\n",
     "}\n",
     "\n",
     "# Send GET request\n",
@@ -124,12 +181,12 @@
    "id": "f5ff8044",
    "metadata": {},
    "source": [
-    "Send message"
+    "Send message with template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "973fdf75",
    "metadata": {},
    "outputs": [
@@ -137,8 +194,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status Code: 200\n",
-      "Response: {'messaging_product': 'whatsapp', 'contacts': [{'input': '393477636182', 'wa_id': '393477636182'}], 'messages': [{'id': 'wamid.HBgMMzkzNDc3NjM2MTgyFQIAERgSMDAzODc0M0QwRkJDQ0IxNzc2AA=='}]}\n"
+      "Status Code: 404\n",
+      "Response Text: {\"error\":{\"message\":\"(#132001) Template name does not exist in the translation\",\"type\":\"OAuthException\",\"code\":132001,\"error_data\":{\"messaging_product\":\"whatsapp\",\"details\":\"template name (first_contact) does not exist in it\"},\"fbtrace_id\":\"Ab5SZCK5QbRIxScHHY9OHRs\"}}\n"
      ]
     }
    ],
@@ -149,7 +206,7 @@
     "\n",
     "# Load environment variables\n",
     "load_dotenv()\n",
-    "ACCESS_TOKEN = os.getenv(\"ACCESS_TOKEN\")\n",
+    "LONG_TERM_TOKEN = os.getenv(\"LONG_TERM_TOKEN\")\n",
     "PHONE_NUMBER_ID = os.getenv(\"PHONE_NUMBER_ID\")\n",
     "RECIPIENT_PHONE = os.getenv(\"RECIPIENT_PHONE\")\n",
     "\n",
@@ -158,7 +215,7 @@
     "\n",
     "# Headers for authentication and content type\n",
     "headers = {\n",
-    "    \"Authorization\": f\"Bearer {ACCESS_TOKEN}\",\n",
+    "    \"Authorization\": f\"Bearer {LONG_TERM_TOKEN}\",\n",
     "    \"Content-Type\": \"application/json\"\n",
     "}\n",
     "\n",
@@ -201,6 +258,14 @@
     "except requests.exceptions.RequestException as e:\n",
     "    print(f\"An error occurred: {e}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74d894c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
